# Kite-Engine

./: .gitignore  README.md
app/: CMakeLists.txt  configure.bat
app/cfg/: water_config.xml
app/cmake/: external_dependencies.cmake  util.cmake
app/include/engine/: engine.h
app/include/engine/types/: objects.h
app/include/tools/: constants.h  mesh_generator.h  resource_manager.h  transform.h
app/shaders/: normal_map.glsl
app/shaders/atmosphere/: fragment.glsl  vertex.glsl
app/shaders/water/: RefractionReflectionShader_CS.glsl  fragment.glsl  geometry.glsl  tc.glsl  vertex.glsl
app/shaders/water/fft/: h0k.comp
app/shaders/water/wireframe/: geometry.glsl  vertex.glsl
app/src/3dparty/gl3w/: CMakeLists.txt
app/src/engine/: CMakeLists.txt  engine.cpp  engine_p.cpp  engine_p.h  renderer.cpp  renderer.h
app/src/engine/buffer/: frame_buffer.cpp  frame_buffer.h
app/src/engine/camera/: camera.cpp  camera.h  camera_p.cpp  camera_p.h
app/src/engine/entities/: normal_map.cpp  normal_map.h  patchVBO.cpp  patchVBO.h
app/src/engine/entities/atmosphere/: Atmosphere.cpp  Atmosphere.h  atmosphere_p.cpp  atmosphere_p.h  atmospheric_constants.h
app/src/engine/entities/ifc/: i3dentity.h
app/src/engine/entities/water/: fft.cpp  fft.h  normal_map.cpp  normal_map.h  reflection.cpp  reflection.h  water.cpp  water.h  water_cfg.cpp  water_cfg.h  water_p.cpp  water_p.h
app/src/engine/entities/water/fft/: Hkt.cpp  Hkt.h  fft.cpp  fft.h  h0k.cpp  h0k.h  shader_storage_buffer.cpp  shader_storage_buffer.h  twiddle_factors.cpp  twiddle_factors.h
app/src/engine/model/: mesh.cpp  mesh.h  model.cpp  model.h  model_p.cpp  model_p.h
app/src/engine/shaders/: base_shader.cpp  base_shader.h  normal_map_shader.cpp  normal_map_shader.h
app/src/engine/shaders/atmosphere/: ScatteringShader.cpp  ScatteringShader.h
app/src/engine/shaders/water/: ReflectRefractShader.cpp  ReflectRefractShader.h  butterflyshader.cpp  butterflyshader.h  h0k_shader.cpp  h0k_shader.h  hkt_shader.cpp  hkt_shader.h  inversion_shader.cpp  inversion_shader.h  twiddle_factor_shader.cpp  twiddle_factor_shader.h  water_shader.cpp  water_shader.h  water_wireframe_shader.cpp  water_wireframe_shader.h
app/src/engine/texture/: texture.cpp  texture.h  texture_viewer.cpp  texture_viewer.h
app/src/kite/: CMakeLists.txt  application.cpp  application.h  main.cpp
app/src/tools/: CMakeLists.txt  mesh_generator.cpp  resource_manager.cpp  resource_manager_p.cpp  resource_manager_p.h  transform.cpp  transform_p.cpp  transform_p.h
